syntax = "proto3";

package yuv;

option java_package = "edu.cmu.cs.gabriel";
option java_outer_classname = "YUVProtos";

message ToServer {
    bytes image = 1;
    int32 width = 2;
    int32 height = 3;
    int32 rotation = 4;
}
