syntax = "proto3";

package gabriel;

import "google/protobuf/any.proto";

option java_package = "edu.cmu.cs.gabriel.protocol";
option java_outer_classname = "Protos";

enum PayloadType {
    IMAGE = 0;
    VIDEO = 1;
    AUDIO = 2;
    IMU = 3;
    TEXT = 4;
    ANIMATION = 5;
    OTHER = 6;
}

message InputFrame {
    PayloadType payload_type = 1;
    repeated bytes payloads = 2;
    // Optional additional fields
    google.protobuf.Any extras = 3;
}

message FromClient {
    int64 frame_id = 1;
    repeated string source_name = 2;
    InputFrame input_frame = 3;
}

message ResultWrapper {
    enum Status {
        SUCCESS = 0;
        UNSPECIFIED_ERROR = 1;

        // Errors that are not related to Gabriel but rather to the engine
        // itself.
        ENGINE_ERROR = 2;

        // Cognitive engine expected different PayloadType from this source
        WRONG_INPUT_FORMAT = 3;

        // No Cognitive engines accept frames from source_name
        NO_ENGINE_FOR_SOURCE = 4;

        // This client has no tokens to send frames from source_name
        NO_TOKENS = 5;

        // The server dropped the frame because it was backed up
        SERVER_DROPPED_FRAME = 6;
    }

    message Result {
        PayloadType payload_type = 1;
        bytes payload = 2;
    }

    // From https://github.com/protocolbuffers/protobuf/blob/master/src/google/protobuf/wrappers.proto#L120
    // TODO: Switch to google.protobuf.StringValue once MobilEdgeX supports
    // protobuf-javalite
    message StringValue {
        // The string value.
        string value = 1;
    }

    Status status = 1;
    repeated Result results = 2;

    // Optional additional fields
    google.protobuf.Any extras = 3;

    // Optionally specify the name of the module that produced the result
    StringValue result_producer_name = 4;
}

message ToClient {
    message Welcome {
        repeated string sources_consumed = 1;
        int32 num_tokens_per_source = 2;
    }

    message Response {
        // The source of the original frame; allows the client to return the
        // token correctly.
        string source_name = 1;
        int64 frame_id = 2;
        bool return_token = 3;
        ResultWrapper result_wrapper = 4;
    }

    oneof welcome_or_response {
        Welcome welcome = 1;
        Response response = 2;
    }
}

message FromStandaloneEngine {
    message Welcome {
        string source_name = 1;
        bool all_responses_required = 2;
    }

    oneof welcome_or_result_wrapper {
        Welcome welcome = 1;
        ResultWrapper result_wrapper = 2;
    }
}
